don't hide the slider caption on mobile, fixes #46

--- a/style.scss
+++ b/style.scss
@@ -4034,7 +4034,6 @@ body {
 		font-size: 85%; 
 	} 
 	.callout-box,
-	.flex-caption,
 	#feature-box h3 { display: none }
 	.callout-box { padding: 0px }
 	html.js { margin-top: 0 !important }
